...
<!--            android:drawableLeft="@android:drawable/ic_menu_search"-->
<!--            android:layout_marginBottom="16dp" />-->


        <!-- Vehicle List Container -->
        <LinearLayout
            android:id="@+id/vehicle_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>
...
